package ExemploLego;

public interface Lego {
    void exibir();
    void monstar();
    void desmontar();
}